2016-10-08	"When all else fails, read the instructions."  (2)

		share/innocent-pear/yarly.h :
		- upped the default function complexity
		- split munging of DefRetVal, to avoid unneeded recursion in
		  the compiler

		share/innocent-pear/doge-i.h :
		- added dummy inline function to get random seeds from
		  innocent-pear-c++ into preprocessed output
		- (re)increased confusion iterations, but not confusion layers

		share/innocent-pear/epic.cc :
		- now uses .st_blksize instead of .st_size as buffer size when
		  reading symlink...

		test/test-dawg-syn.cc ,
		test/test-dawg-syn.good :
		- reduced the number of randomizations

		configure :
		- now tests for command-line utilities used at build time

		GNUmakefile :
		- now only uses readelf, xz, etc. if these exist

		README.md :
		- slightly updated

		lolwutconf/ :
		- bumped to 23fdf9745a

2016-10-07	"When all else fails, read the instructions."

		configure :
		- now tests for prctl(...), PR_GET_DUMPABLE (unused for now),
		  and PR_SET_DUMPABLE

		GNUmakefile :
		- now writes results of tests for prctl(...) et al. to
		  $(config.h.target)

		include/innocent-pear/rofl.h :
		- added rofl<...>::prctl(...)
		- (untested) added some syscall numbers for AArch64

		include/innocent-pear/omg.h :
		- now tries to call rofl<...>::prctl(...)

		include/innocent-pear/kthxbai.h :
		- simplified recursion notation; fixed a bug in the process

		include/innocent-pear/yarly.h :
		- reduced number of recursion levels for terminal constants

		.travis.yml :
		- now sets $CFLAGS_FOR_TARGET appropriately

2016-10-06	Added test for interfacing with C code.

		GNUmakefile :
		- added test-doge-with-c test case, and associated rules and
		  variable definitions

		test/test-doge-with-c.c ,
		test/test-doge-with-c.good :
		- new

2016-10-05	Now with a C (i.e. non-C++) compiler front-end; untested.

		bin/innocent-pear-front-end.tcc :
		- renamed from bin/innocent-pear-c++.cc, and made more generic

		bin/innocent-pear-c++.cc ,